/**
 * PxPlugin "sitemapExcel" 更新履歴
 */

■PxPlugin sitemapExcel 0.0.1b2 (2013/**/**)

- トップページに id がセットされている場合に、これを無視するようにした。


■PxPlugin sitemapExcel 0.0.1b1 (2013/9/8)

- アップロードした xlsx で直接サイトマップCSVを上書きできるようにした。
- 設定シートをやめて、データシートのセルA1に設定を書くようにした。
- A列に、文字列「EndOfData」を発見したら、データ読み込みを終了するようにした。
- 出力されるエクセルファイルが、ちょっぴりおしゃれになった。


■PxPlugin sitemapExcel 0.0.1a1 (2013/6/10)

- 初版リリース。
